resolved fdo#46699 do not write compound document header when reading 0-length file

Creating an SotStorage with a 0-length stream has the side-effect of creating
the compound document (aka OLE storage) header on the stream and effectively
writing that to disk, thus garbling the empty file.